force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__BirthDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__BirthDate__c</fullName>
    <label>Birth Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BirthDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>