force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__BirthDateMonth__c.field-meta.xml
<CustomField>
    <fullName>ssot__BirthDateMonth__c</fullName>
    <label>Birth Date Month</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BirthDateMonth</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>