force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__BirthPlace__c.field-meta.xml
<CustomField>
    <fullName>ssot__BirthPlace__c</fullName>
    <label>Birth Place</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BirthPlace</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>