force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__ChildrenCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChildrenCount__c</fullName>
    <label>Children Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChildrenCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>