force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__ConsumerCreditScore__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConsumerCreditScore__c</fullName>
    <label>Consumer Credit Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConsumerCreditScore</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>