force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__ConvictionsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvictionsCount__c</fullName>
    <label>Convictions Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConvictionsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>