force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__DeathDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeathDate__c</fullName>
    <label>Death Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeathDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>