force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__DoExtractMyDataUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoExtractMyDataUpdateDate__c</fullName>
    <label>Do Extract My Data Update Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoExtractMyDataUpdateDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>