force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__DoNotProcessFromUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoNotProcessFromUpdateDate__c</fullName>
    <label>Do Not Process Update Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoNotProcessFromUpdateDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>