force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__DoNotProcessReasonId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoNotProcessReasonId__c</fullName>
    <label>Do Not Process Reason</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoNotProcessReasonId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>