force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__EmployedSinceDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployedSinceDate__c</fullName>
    <label>Employed Since Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployedSinceDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>