force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__HasAlcoholAbuseHistory__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasAlcoholAbuseHistory__c</fullName>
    <label>Has Alcohol Abuse History</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasAlcoholAbuseHistory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>