force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__HasDrugAbuseHistory__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasDrugAbuseHistory__c</fullName>
    <label>Has Drug Abuse History</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasDrugAbuseHistory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>