force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__HasOptedOutSolicit__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasOptedOutSolicit__c</fullName>
    <label>Do Not Solicit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasOptedOutSolicit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>