force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__HighestEducationLevelId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HighestEducationLevelId__c</fullName>
    <label>Highest Education Level</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HighestEducationLevelId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>