force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__HospitalizationsLast5YearsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__HospitalizationsLast5YearsCount__c</fullName>
    <label>Hospitalizations Last 5 Years Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HospitalizationsLast5YearsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>