force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__InfluencerRating__c.field-meta.xml
<CustomField>
    <fullName>ssot__InfluencerRating__c</fullName>
    <label>Influencer Rating</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InfluencerRating</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>