force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__IsAlcoholConsumer__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAlcoholConsumer__c</fullName>
    <label>Is Alcohol Consumer</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAlcoholConsumer</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>