force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__IsHighRiskOccupation__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsHighRiskOccupation__c</fullName>
    <label>Is High Risk Occupation</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsHighRiskOccupation</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>