force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__MilitaryStatusId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MilitaryStatusId__c</fullName>
    <label>Military Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MilitaryStatusId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>