force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__NameSuffix__c.field-meta.xml
<CustomField>
    <fullName>ssot__NameSuffix__c</fullName>
    <label>Name Suffix</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NameSuffix</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>