force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__OccupationTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OccupationTypeId__c</fullName>
    <label>Occupation Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OccupationTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>