force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PartyRoles__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyRoles__c</fullName>
    <label>PartyRoles relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyRoles</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>