force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PartyTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyTypeId__c</fullName>
    <label>Party Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>