force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PersonHeight__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonHeight__c</fullName>
    <label>Person Height</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonHeight</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>