force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PersonHeightUnitofMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonHeightUnitofMeasureId__c</fullName>
    <label>Person Height Unit of Measure</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonHeightUnitofMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>