force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PersonWeight__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonWeight__c</fullName>
    <label>Person Weight</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonWeight</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>