force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PersonWeightUnitofMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonWeightUnitofMeasureId__c</fullName>
    <label>Person Weight Unit of Measure</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonWeightUnitofMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>