force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PrimaryCitizenshipCountryId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryCitizenshipCountryId__c</fullName>
    <label>Primary Citizenship Country</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryCitizenshipCountryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>