force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PrimaryHobby__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryHobby__c</fullName>
    <label>[DoNotUse]Primary Hobby</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryHobby</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>