force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__PrimaryHobbyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryHobbyId__c</fullName>
    <label>Primary Hobby</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryHobbyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>