force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__Religion__c.field-meta.xml
<CustomField>
    <fullName>ssot__Religion__c</fullName>
    <label>[DoNotUse]Religion</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Religion</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>