force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__ResidenceCountry__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResidenceCountry__c</fullName>
    <label>[DoNotUse]Residence Country</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResidenceCountry</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>