force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__SecondLastName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SecondLastName__c</fullName>
    <label>Second Last Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SecondLastName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>