force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__SendIndividualData__c.field-meta.xml
<CustomField>
    <fullName>ssot__SendIndividualData__c</fullName>
    <label>Export Individual&apos;s Data</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SendIndividualData</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>