force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__WebSiteURL__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebSiteURL__c</fullName>
    <label>Web Site URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebSiteURL</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>