force-app/main/default/objects/ssot__Individual__dlm/fields/ssot__WeddingAnniversaryDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__WeddingAnniversaryDate__c</fullName>
    <label>Wedding Anniversary Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WeddingAnniversaryDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>